tdf#165491 ITEM regression: Chart needs order of events

The Item with WhichID SCHATTR_STAT_KIND_ERROR *has* to be
handled 1st since it sets additional information about the
ErrorBarStyle at beans::XPropertySet xErrorBarProp that the
processing of the *other* Items already need access to, see
'case SCHATTR_STAT_KIND_ERROR' in
StatisticsItemConverter::ApplySpecialItem. This worked before
the change of SfxItemSet to use a std::unordered_set since
the order of Items was fix and - since SCHATTR_STAT_KIND_ERROR
had the lowest WhichID - was handled 1st. Not sure if that was
by purpose and it was known that this was necessary - there
are no comments hinting to that, so it might have worked by
coincidence before. In general it is bad style to rely on the
'order' of Items in an ItemSet - there is no order defined in
general.

Change-Id: I93e2c8e30f762e1bb83adb2b43459bbfb263a151
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182742
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>
Tested-by: Jenkins
(cherry picked from commit ec65a00298ffbb30869dec222887f42f3ca4533e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182746
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>